drivers/card/K2616_Dll.h

/////////////////////////////////////////////////////////////////
//////////////////// DLL???????????/////////////////////////////
//CommOpen(101-104)
#define Bad_CommOpen -101//?????.
#define Bad_CommSet -102//???????????,(102)??????CommSet??????
#define Bad_CommTimeouts -999
#define Bad_CommQueue -998
//CommClose(105)
#define Bad_CommClose -105//??????.
//Send(106)
#define Bad_SendByte -106
#define Bad_SendData_Len -107
//Receive(106-107)
#define Bad_ReceiveData_ReadFile -103
#define Bad_ReceiveData_Len -104
// ????????
#define Bad_Parameter -200//???????????(???????)
/**********???????*********/
#define CardBoxEmpty				0xA0//????
#define CardJam						0xA2//???????
#define RecycleBoxFull				0xA1//?????俨??
#define RecycleBoxNotInPosition		0xA3//?????俨??
#define CardBoxNotInPosition		0xA4//????????λ
#define HookMoveBox1NotEmpty		0xA7//????1 2???п???????????????2???,??????????????豸????и?λ????
#define HookMoveTimeOut				0xA8//??????λ???????????????????
#define MoverMoveError				0xAE//???????????
#define PlatformWaitCard			0xAF//???????????
#define PlatformFlipCard			0xB0//?????????
#define Hook1MoveFail        		0xB1//???????1???
#define Hook2MoveFail        		0xB2//???????2???
#define CardIsInPlatform			0xB3//?????????,??????д??????????????л??????
#define SendCardToPlatformFail		0xB4//???????????
#define CardIsNotInPlatform			0xB5//???????????????л?????????????
#define SendCardFailed				0xC6//???????
#define RecyclePlatformCard			0xC7//????????????????
#define RecycleCardFailed			0xC8//????????????????????????
#define HaveCardAndSendCardFailed	0xC9//??????????п??????????
#define HaveNoCardRecycleCardFailed	0xCA//????????????????????????????
//######################################################//
//==================???????===========================//
//+++++++++++++++++++++++++++++++++++++++++++++++++++++//
HANDLE __stdcall K2616_CommOpen(char *Port);
HANDLE __stdcall K2616_CommOpenWithBaud(char *Port, unsigned int _data);
int __stdcall K2616_CommClose(HANDLE ComHandle);
int __stdcall K2616_GetSysVerion(HANDLE ComHandle, char *strVerion);
//+++++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_SetCommBaud(HANDLE ComHandle, unsigned int _Baud);
int __stdcall K2616_Reset(HANDLE ComHandle, BYTE _PM,BYTE _VerCode[50]);
int __stdcall K2616_CheckCardPosition(HANDLE ComHandle, BYTE _Position[]);
int __stdcall K2616_CheckSensorStates(HANDLE ComHandle, BYTE _States[]);
int __stdcall K2616_CheckSensorVoltage(HANDLE ComHandle, BYTE _Valtage[]);
int __stdcall K2616_EnterCard(HANDLE ComHandle,BYTE EnterType,DWORD WaitTime);
int __stdcall K2616_EnterCardUntime(HANDLE ComHandle, BYTE EnterType);//;;;????????????
int __stdcall K2616_MoveCard(HANDLE ComHandle, BYTE _PM);
int __stdcall K2616_AutoTestICCard(HANDLE ComHandle, BYTE *_IcCardType);
int __stdcall K2616_AutoTestRFIDCard(HANDLE ComHandle, BYTE *_RFIDCardType);
int __stdcall K2616_PowerOn(HANDLE ComHandle);
int __stdcall K2616_PowerOff(HANDLE ComHandle);
int __stdcall K2616_Led1Control(HANDLE ComHandle, BYTE _PM);
int __stdcall K2616_SetLedFlickerRate(HANDLE ComHandle, BYTE _PM, BYTE _Rate);
int __stdcall K2616_Led2Control(HANDLE ComHandle, BYTE _PM);
int __stdcall K2616_ReadBarcode(HANDLE ComHandle, BYTE *szData);