apsp-client-sdk/src/test/java/com/zmcsoft/apsp/client/K2616_DllLibrary.java


	}
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Bad_CommOpen = (int)-101;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Bad_CommSet = (int)-102;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Bad_CommTimeouts = (int)-999;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Bad_CommQueue = (int)-998;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Bad_CommClose = (int)-105;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Bad_SendByte = (int)-106;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Bad_SendData_Len = (int)-107;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Bad_ReceiveData_ReadFile = (int)-103;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Bad_ReceiveData_Len = (int)-104;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Bad_Parameter = (int)-200;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int CardBoxEmpty = (int)0xA0;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int CardJam = (int)0xA2;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int RecycleBoxFull = (int)0xA1;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int RecycleBoxNotInPosition = (int)0xA3;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int CardBoxNotInPosition = (int)0xA4;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int HookMoveBox1NotEmpty = (int)0xA7;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int HookMoveTimeOut = (int)0xA8;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int MoverMoveError = (int)0xAE;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int PlatformWaitCard = (int)0xAF;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int PlatformFlipCard = (int)0xB0;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Hook1MoveFail = (int)0xB1;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int Hook2MoveFail = (int)0xB2;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int CardIsInPlatform = (int)0xB3;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int SendCardToPlatformFail = (int)0xB4;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int CardIsNotInPlatform = (int)0xB5;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int SendCardFailed = (int)0xC6;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int RecyclePlatformCard = (int)0xC7;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int RecycleCardFailed = (int)0xC8;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int HaveCardAndSendCardFailed = (int)0xC9;
	/** <i>native declaration : drivers\card\K2616_Dll.h</i> */
	public static final int HaveNoCardRecycleCardFailed = (int)0xCA;
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>HANDLE K2616_CommOpen(char*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:49</i><br>
	 * @deprecated use the safer methods {@link #K2616_CommOpen(ByteBuffer)} and {@link #K2616_CommOpen(Pointer)} instead
	 */
	@Deprecated 
	HANDLE K2616_CommOpen(Pointer Port);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>HANDLE K2616_CommOpen(char*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:49</i>
	 */
	HANDLE K2616_CommOpen(ByteBuffer Port);
	/**
	 * Original signature : <code>HANDLE K2616_CommOpenWithBaud(char*, unsigned int)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:50</i><br>
	 * @deprecated use the safer methods {@link #K2616_CommOpenWithBaud(ByteBuffer, int)} and {@link #K2616_CommOpenWithBaud(Pointer, int)} instead
	 */
	@Deprecated 
	HANDLE K2616_CommOpenWithBaud(Pointer Port, int _data);
	/**
	 * Original signature : <code>HANDLE K2616_CommOpenWithBaud(char*, unsigned int)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:50</i>
	 */
	HANDLE K2616_CommOpenWithBaud(ByteBuffer Port, int _data);
	/**
	 * Original signature : <code>int K2616_CommClose(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:51</i>
	 */
	int K2616_CommClose(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_GetSysVerion(HANDLE, char*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:52</i><br>
	 * @deprecated use the safer methods {@link #K2616_GetSysVerion(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_GetSysVerion(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_GetSysVerion(HANDLE ComHandle, Pointer strVerion);
	/**
	 * Original signature : <code>int K2616_GetSysVerion(HANDLE, char*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:52</i>
	 */
	int K2616_GetSysVerion(HANDLE ComHandle, ByteBuffer strVerion);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_SetCommBaud(HANDLE, unsigned int)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:54</i>
	 */
	int K2616_SetCommBaud(HANDLE ComHandle, int _Baud);
	/**
	 * Original signature : <code>int K2616_Reset(HANDLE, BYTE, BYTE[50])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:55</i><br>
	 * @deprecated use the safer methods {@link #K2616_Reset(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_Reset(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_Reset(HANDLE ComHandle, byte _PM, Pointer _VerCode);
	/**
	 * Original signature : <code>int K2616_Reset(HANDLE, BYTE, BYTE[50])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:55</i>
	 */
	int K2616_Reset(HANDLE ComHandle, byte _PM, ByteBuffer _VerCode);
	/**
	 * Original signature : <code>int K2616_CheckCardPosition(HANDLE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:56</i><br>
	 * @deprecated use the safer methods {@link #K2616_CheckCardPosition(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_CheckCardPosition(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_CheckCardPosition(HANDLE ComHandle, Pointer _Position);
	/**
	 * Original signature : <code>int K2616_CheckCardPosition(HANDLE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:56</i>
	 */
	int K2616_CheckCardPosition(HANDLE ComHandle, ByteBuffer _Position);
	/**
	 * Original signature : <code>int K2616_CheckSensorStates(HANDLE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:57</i><br>
	 * @deprecated use the safer methods {@link #K2616_CheckSensorStates(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_CheckSensorStates(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_CheckSensorStates(HANDLE ComHandle, Pointer _States);
	/**
	 * Original signature : <code>int K2616_CheckSensorStates(HANDLE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:57</i>
	 */
	int K2616_CheckSensorStates(HANDLE ComHandle, ByteBuffer _States);
	/**
	 * Original signature : <code>int K2616_CheckSensorVoltage(HANDLE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:58</i><br>
	 * @deprecated use the safer methods {@link #K2616_CheckSensorVoltage(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_CheckSensorVoltage(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_CheckSensorVoltage(HANDLE ComHandle, Pointer _Valtage);
	/**
	 * Original signature : <code>int K2616_CheckSensorVoltage(HANDLE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:58</i>
	 */
	int K2616_CheckSensorVoltage(HANDLE ComHandle, ByteBuffer _Valtage);
	/**
	 * Original signature : <code>int K2616_EnterCard(HANDLE, BYTE, DWORD)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:59</i>
	 */
	int K2616_EnterCard(HANDLE ComHandle, byte EnterType, int WaitTime);
	/**
	 * ;;;\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd\ufffd<br>
	 * Original signature : <code>int K2616_EnterCardUntime(HANDLE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:60</i>
	 */
	int K2616_EnterCardUntime(HANDLE ComHandle, byte EnterType);
	/**
	 * Original signature : <code>int K2616_MoveCard(HANDLE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:61</i>
	 */
	int K2616_MoveCard(HANDLE ComHandle, byte _PM);
	/**
	 * Original signature : <code>int K2616_AutoTestICCard(HANDLE, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:62</i><br>
	 * @deprecated use the safer methods {@link #K2616_AutoTestICCard(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_AutoTestICCard(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AutoTestICCard(HANDLE ComHandle, Pointer _IcCardType);
	/**
	 * Original signature : <code>int K2616_AutoTestICCard(HANDLE, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:62</i>
	 */
	int K2616_AutoTestICCard(HANDLE ComHandle, ByteBuffer _IcCardType);
	/**
	 * Original signature : <code>int K2616_AutoTestRFIDCard(HANDLE, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:63</i><br>
	 * @deprecated use the safer methods {@link #K2616_AutoTestRFIDCard(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_AutoTestRFIDCard(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AutoTestRFIDCard(HANDLE ComHandle, Pointer _RFIDCardType);
	/**
	 * Original signature : <code>int K2616_AutoTestRFIDCard(HANDLE, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:63</i>
	 */
	int K2616_AutoTestRFIDCard(HANDLE ComHandle, ByteBuffer _RFIDCardType);
	/**
	 * Original signature : <code>int K2616_PowerOn(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:64</i>
	 */
	int K2616_PowerOn(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_PowerOff(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:65</i>
	 */
	int K2616_PowerOff(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_Led1Control(HANDLE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:66</i>
	 */
	int K2616_Led1Control(HANDLE ComHandle, byte _PM);
	/**
	 * Original signature : <code>int K2616_SetLedFlickerRate(HANDLE, BYTE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:67</i>
	 */
	int K2616_SetLedFlickerRate(HANDLE ComHandle, byte _PM, byte _Rate);
	/**
	 * Original signature : <code>int K2616_Led2Control(HANDLE, BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:68</i>
	 */
	int K2616_Led2Control(HANDLE ComHandle, byte _PM);
	/**
	 * Original signature : <code>int K2616_ReadBarcode(HANDLE, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:69</i><br>
	 * @deprecated use the safer methods {@link #K2616_ReadBarcode(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_ReadBarcode(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ReadBarcode(HANDLE ComHandle, Pointer szData);
